--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,24 @@
 {
+  // Formatar sempre que salvar
+  "editor.formatOnSave": true,
 
+  // Prettier como padrão global
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
 
-    // Set the default
+  // Regras por linguagem
+  "[javascript]": {
     "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    // Enable per-language
-    "[javascript]": {
-        "editor.formatOnSave": true
-    },
-    "[json]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-    }
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  }
 }
-
