--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "eslint-import-resolver-typescript": "^3.5.3",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-import-helpers": "^1.3.1",
+        "eslint-plugin-jsdoc": "^54.1.1",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-jsx-fragments": "^0.2.0",
         "eslint-plugin-prettier": "^4.2.1",
